# Matcha-TTS

./: .gitignore  pyproject.toml  synthesis.ipynb  wavs
configs/data/: shanghai.yaml
configs/experiment/: shanghai_1910.yaml
matcha/: app.py  cli.py  train.py
matcha/data/: text_mel_datamodule.py
matcha/hifigan/: models.py
matcha/models/: baselightningmodule.py  matcha_tts.py
matcha/models/components/: decoder.py  flow_matching.py  text_encoder.py  transformer.py
matcha/onnx/: export.py  infer.py
matcha/text/: __init__.py  cleaners.py  numbers.py  shanghai_cleaners.py  shanghai_symbols.py  symbols.py
matcha/utils/: __init__.py  audio.py  generate_data_statistics.py  get_durations_from_trained_model.py  rich_utils.py  utils.py
matcha/utils/data/: hificaptain.py  ljspeech.py  utils.py
