[project]
name = "matcha-tts"
version = "0.0.1"
description = "ðŸµ Matcha-TTS: A fast TTS architecture with conditional flow matching (Simplified)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Shivam Mehta", email = "shivam.mehta25@gmail.com" }
]
dependencies = []

[build-system]
requires = ["setuptools", "wheel", "cython>=3.0.0", "numpy>=1.26.0", "packaging"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["matcha"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
testpaths = "tests/"
